--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@openrouter/sdk": "^0.2.9",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -49,6 +50,7 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
+    "openai": "^6.10.0",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-day-picker": "^9.11.3",
